<resources>
    <string name="app_name">LearnConnect</string>
    <string name="wishlist">WishList</string>
    <string name="profile">Profile</string>
    <string name="courses">Courses</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="password_hint">******</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_text">Do not have account ? <u>Create one</u></string>
    <string name="full_name">Full Name</string>
    <string name="policy">By creating an account, you agree <b><u>Terms of Use</u></b> and <b><u>Privacy Policy</u></b></string>
    <string name="mail_already_exist">Mail already exist</string>
    <string name="something_is_wrong">Something is Wrong!</string>

    <string name="verify_password">Verify Password</string>
    <string name="login_required">Login required</string>
    <string name="username_is_not_valid_please_check_again">Username is not valid! Please Check Again</string>
    <string name="email_is_not_valid_please_check_again">Email is not valid! Please Check Again</string>
    <string name="phone_number_is_not_valid_please_check_again">Phone Number is not valid! Please Check Again</string>
    <string name="password_length_should_be_at_least_6_please_check_again">Password length should be at least 6! Please Check Again</string>
    <string name="passwords_do_not_match_please_check_again">Passwords do not match! Please Check Again</string>
    <string name="unknown_error">Unknown error</string>
    <string name="please_checked_login_information">Please Checked Login information</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_user">Welcome, %1$s</string>
    <string name="failed_to_register_user">Failed to register user.</string>
    <string name="failed_to_login_user">Failed to login user.</string>
    <string name="logout">Logout</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="about_me">About Me</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="software">Software</string>
    <string name="economy">Economy</string>
    <string name="health">Health</string>
    <string name="personal_development">Personal Development</string>
    <string name="music">Music</string>
    <string name="art">Art</string>
    <string name="sports">Sports</string>
    <string name="education">Education</string>
    <string name="travel">Travel</string>
    <string name="technology">Technology</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="failed_to_get_courses">Failed to get courses! Please try again.</string>
    <string name="new_courses">New Courses</string>
    <string name="highest_rated_courses">Highest Rated Courses</string>
    <string name="category">Category : </string>
    <string name="category_tags">Category Tags :</string>
    <string name="category_not_found">Category not found</string>
    <string name="course_video_content">Course Video Content: </string>
    <string name="course_video_time">Video Stream Time: </string>
    <string name="empty_wishlist">You do not have saved course yet.</string>
    <string name="no_data_found">No Course Found</string>
    <string name="go_to_details">Go to Details</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="purchase">Purchase</string>
    <string name="do_you_want_to_purchase_this_course">Do you want to purchase this course?</string>
    <string name="successfully_purchased_course"><u>Successfully Purchased Course</u></string>
    <string name="you_have_not_purchased_any_course">You have not purchased any course</string>
    <string name="video_count">%1$s Video(s)</string>
    <string name="exiting">Exiting!</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="you_have_not_purchased">You have not purchased this course in order to play videos</string>
    <string name="error">Error!</string>
    <string name="we_can_not_play_video">We can not play video!</string>
    <string name="course_rating">Course Rating: </string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="turkish">Türkçe</string>

</resources>