<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegisterFragment">


    <ImageButton
        android:id="@+id/back_login_action"
        android:layout_width="@dimen/_48"
        android:layout_height="@dimen/_48"
        android:layout_marginStart="@dimen/_10"
        android:layout_marginTop="@dimen/_10"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_64"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="@dimen/text_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18"
        android:layout_marginTop="@dimen/_18"
        android:layout_marginEnd="@dimen/_18"
        android:textColor="@color/error_text_red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_text_view"
        tools:text="@string/app_name"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/register_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/login_full_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18"
        android:layout_marginTop="@dimen/_64"
        android:layout_marginEnd="@dimen/_18"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textSize="@dimen/text_21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_text_view" />

    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18"
        android:layout_marginTop="@dimen/_18"
        android:layout_marginEnd="@dimen/_18"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/text_21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_full_name_input" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18"
        android:layout_marginTop="@dimen/_18"
        android:layout_marginEnd="@dimen/_18"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textSize="@dimen/text_21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_input" />


    <EditText
        android:id="@+id/login_password_verify_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18"
        android:layout_marginTop="@dimen/_18"
        android:layout_marginEnd="@dimen/_18"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textSize="@dimen/text_21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_input" />

    <Button
        android:id="@+id/register_btn_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18"
        android:layout_marginTop="@dimen/_24"
        android:layout_marginEnd="@dimen/_18"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_verify_input" />

    <TextView
        android:id="@+id/policy_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24"
        android:layout_marginBottom="@dimen/_24"
        android:text="@string/policy"
        android:textAlignment="center"
        android:textSize="@dimen/text_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>