<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    tools:context=".auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/app_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circular_rectangle__shape"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="@dimen/text_25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/error_text_red"
            android:layout_marginStart="@dimen/_18"
            android:layout_marginTop="@dimen/_64"
            android:layout_marginEnd="@dimen/_18"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name_text_view" />

        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18"
            android:backgroundTint="@color/error_text_red"
            android:layout_marginTop="@dimen/_18"
            android:layout_marginEnd="@dimen/_18"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="@dimen/text_21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_email_input" />

        <Button
            android:id="@+id/login_btn_action"
            android:layout_width="@dimen/_150"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18"
            android:layout_marginTop="@dimen/_24"
            android:layout_marginEnd="@dimen/_18"
            android:backgroundTint="@color/error_text_red"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password_input" />

        <TextView
            android:id="@+id/error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18"
            android:layout_marginTop="@dimen/_18"
            android:layout_marginEnd="@dimen/_18"
            android:textColor="@color/error_text_red"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name_text_view"
            tools:text="@string/app_name"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/register_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24"
            android:text="@string/register_text"
            android:textAlignment="center"
            android:textSize="@dimen/text_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_btn_action" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>