<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".setting.SettingActivity">

    <Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_64"
        android:background="@color/white"
        android:contentInsetStart="@dimen/_0"
        android:contentInsetLeft="@dimen/_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="@dimen/_64"
            android:layout_height="@dimen/_64"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back"
            app:contentInsetStart="@dimen/_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/settings"
            android:textSize="@dimen/text_21" />
    </Toolbar>

    <ScrollView
        android:id="@+id/register_scroll_view"
        android:layout_width="@dimen/_0"
        android:layout_height="@dimen/_0"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/dark_mode_switch_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/dark_mode_switch_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_dark_mode"
                    android:textSize="@dimen/text_21" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/dark_mode_switch"
                    android:layout_width="0dp"

                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/logout_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_12"
                android:text="@string/logout"
                android:textColor="@color/error_text_red"
                android:textSize="@dimen/text_21"
                app:layout_constraintTop_toBottomOf="@id/dark_mode_switch_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>