<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="user"
            type="com.odeniz.learnconnect.entity.User" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/register_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        tools:context=".profile.ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_image_view"
                android:layout_width="@dimen/logo_login_width"
                android:layout_height="@dimen/logo_login_width"
                app:imageUri="@{user.profileImage}"
                android:layout_marginTop="@dimen/_24"
                android:background="@drawable/circular_shape"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24"
                android:layout_marginTop="@dimen/_48"
                android:layout_marginEnd="@dimen/_24"
                android:hint="@string/full_name"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_image_view">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/full_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@{user.fullName}"
                    android:textSize="@dimen/text_21"
                    tools:text="@string/profile" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mail_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24"
                android:layout_marginTop="@dimen/_24"
                android:layout_marginEnd="@dimen/_24"
                android:hint="@string/e_mail"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/full_name_edit_text_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mail_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@{user.email}"
                    android:textSize="@dimen/text_21"
                    tools:text="@string/profile" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/about_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24"
                android:layout_marginTop="@dimen/_24"
                android:layout_marginEnd="@dimen/_24"
                android:hint="@string/about_me"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mail_edit_text_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/about_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:minLines="3"
                    android:scrollbars="vertical"
                    android:text="@{user.about}"
                    android:textSize="@dimen/text_21"
                    tools:text="@string/profile" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_changes_btn_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about_edit_text_layout" />

            <ProgressBar
                android:id="@+id/profile_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/error_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18"
                android:layout_marginTop="@dimen/_18"
                android:layout_marginEnd="@dimen/_18"
                android:textColor="@color/error_text_red"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_image_view"
                tools:text="@string/app_name"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>