<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_64"
        android:background="@color/white"
        android:contentInsetStart="@dimen/_0"
        android:contentInsetLeft="@dimen/_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_action_fragment"
            android:layout_width="@dimen/_64"
            android:layout_height="@dimen/_64"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back"
            app:contentInsetStart="@dimen/_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/error_text_red" />

        <TextView
            android:id="@+id/main_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/text_21" />

        <ImageButton
            android:id="@+id/settings_icon"
            android:layout_width="@dimen/_48"
            android:layout_height="@dimen/_48"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_10"
            android:background="@null"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings"
            app:tint="@color/error_text_red" />
    </Toolbar>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/main_fragment_container_view"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="@dimen/_0"
        android:layout_height="@dimen/_0"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/main_bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar"
        app:navGraph="@navigation/app_nav" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/main_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemIconSize="@dimen/_24"
        app:itemIconTint="@color/error_text_red"
        app:itemTextAppearanceActive="@color/error_text_red"
        app:itemTextColor="@color/bottom_bar_background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>